<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mainPerfil"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo_principal">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/padding_pantalla"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/gamestore"
            android:textColor="@color/color_titulo"
            android:textSize="@dimen/texto_titulo_tienda"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/margin_pequeno"
            android:text="@string/perfil_titulo"
            android:textColor="@color/color_subtitulo"
            android:textSize="@dimen/texto_nombre_producto"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imgUsuarioPerfil"
            android:layout_width="@dimen/tamano_foto_perfil"
            android:layout_height="@dimen/tamano_foto_perfil"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/margin_grande"
            android:contentDescription="@string/perfil_titulo"
            android:src="@drawable/ic_usuario_perfil" />

        <EditText
            android:id="@+id/edtNombrePerfil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_grande"
            android:hint="@string/nombre"
            android:inputType="textPersonName"
            android:textColor="@color/color_texto_principal"
            android:textColorHint="@color/color_texto_secundario" />

        <EditText
            android:id="@+id/edtApellidoPerfil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_mediano"
            android:hint="@string/apellido"
            android:inputType="textPersonName"
            android:textColor="@color/color_texto_principal"
            android:textColorHint="@color/color_texto_secundario" />

        <TextView
            android:id="@+id/txtEmailPerfil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_mediano"
            android:text="@string/email"
            android:textColor="@color/color_texto_secundario"
            android:textSize="@dimen/texto_descripcion" />

        <Button
            android:id="@+id/btnGuardarPerfil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_grande"
            android:text="@string/guardar_cambios" />

        <Button
            android:id="@+id/btnVolverCatalogoPerfil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_mediano"
            android:text="@string/volver_catalogo" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>