<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo_principal"
    tools:context=".MainActivity">

    <ScrollView
        android:id="@+id/scrollPrincipal"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:id="@+id/layoutPrincipal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/padding_pantalla">

            <Button
                android:id="@+id/btnVolverCatalogo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Volver al catálogo" />

            <TextView
                android:id="@+id/txtTituloTienda"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/margin_mediano"
                android:text="@string/gamestore"
                android:textColor="@color/color_titulo"
                android:textSize="@dimen/texto_titulo_tienda"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtSubtitulo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/margin_pequeno"
                android:text="@string/subtitulo"
                android:textColor="@color/color_subtitulo"
                android:textSize="@dimen/texto_subtitulo" />

            <ImageView
                android:id="@+id/imgProducto"
                android:layout_width="match_parent"
                android:layout_height="@dimen/alto_imagen_producto"
                android:layout_marginTop="@dimen/margin_grande"
                android:background="@color/color_blanco"
                android:contentDescription="@string/imagen_del_producto"
                android:padding="@dimen/padding_imagen"
                android:scaleType="fitCenter"
                android:src="@drawable/auricular_redragon" />

            <TextView
                android:id="@+id/txtNombreProducto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_grande"
                android:text="@string/titulo_imagen"
                android:textColor="@color/color_texto_principal"
                android:textSize="@dimen/texto_nombre_producto"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtPrecio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_mediano"
                android:text="@string/precio"
                android:textColor="@color/color_precio"
                android:textSize="@dimen/texto_precio"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtDescripcion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_mediano"
                android:lineSpacingExtra="@dimen/espaciado_por_linea"
                android:text="@string/descripcion_producto"
                android:textColor="@color/color_texto_secundario"
                android:textSize="@dimen/texto_descripcion" />

            <Button
                android:id="@+id/btnAgregarCarrito"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_boton_principal"
                android:text="@string/agregar_al_carrito" />

            <Button
                android:id="@+id/btnVaciarCarrito"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_boton_secundario"
                android:text="@string/vaciar_carrito" />

            <TextView
                android:id="@+id/txtContadorCarrito"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_mediano"
                android:background="@color/fondo_contador"
                android:gravity="center"
                android:padding="@dimen/padding_contador"
                android:text="@string/productos_en_carrito"
                android:textColor="@color/color_texto_principal"
                android:textSize="@dimen/texto_contador"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtTotalEstimado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_boton_secundario"
                android:background="@color/fondo_contador"
                android:gravity="center"
                android:padding="@dimen/padding_contador"
                android:text="@string/total_estimado"
                android:textColor="@color/color_precio"
                android:textSize="@dimen/texto_contador"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtTituloCarrito"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_boton_principal"
                android:text="@string/carrito"
                android:textColor="@color/color_titulo_carrito"
                android:textSize="@dimen/texto_titulo_carrito"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/layoutCarrito"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_mediano"
                android:background="@color/fondo_carrito"
                android:orientation="vertical"
                android:padding="@dimen/padding_carrito">

                <TextView
                    android:id="@+id/txtCarritoVacio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/productos_agregados"
                    android:textColor="@color/color_texto_vacio"
                    android:textSize="@dimen/texto_carrito_vacio" />
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>